# win_drop

./: CMakeLists.txt
client/: CMakeLists.txt  client.cpp  client.h  main.cpp  serializer.h  sha1.c  sha1.h  win_global.h
server/: CMakeLists.txt  deserializer.h  main.cpp  server.cpp  server.h
